--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fs-extra": "^11.3.1",
     "helmet": "^8.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.7",
